--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,211 +1,219 @@
-.d-flex {
-    display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+:root {
+  --color-50: #e5f3ff;
+  --color-100: #cfe9ff;
+  --color-200: #a9d4ff;
+  --color-300: #75b3ff;
+  --color-400: #3f82ff;
+  --color-500: #1450ff;
+  --color-600: #0039ff;
+  --color-700: #003aff;
+  --color-800: #0034e3;
+  --color-900: #0022b2;
+  --color-950: #001066;
+  --border-gray-50: #e0e0e0;
+  --border-gray-100: #e6e6e6;
+  --button-gray: #eeeeee;
+  --color-black: #000000;
+  --color-placeholder: #828282;
+  --color-btnReg: #0b2fae;
 }
 
-.justify-content-center {
-    justify-content: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
-.justify-content-between {
-    justify-content: space-between;
+.branding > h1 {
+  font-weight: 900;
+  color: var(--color-900);
+  line-height: 54px;
+  letter-spacing: -1%;
+  font-size: 36px;
 }
 
-.justify-content-left {
-    justify-content: start;
+.branding > img {
+  width: 186px;
+  height: 186px;
+  top: 134px;
+  left: 95px;
 }
 
-.align-items-center{
-    align-items: center;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 15px;
+  margin-top: 2em;
 }
 
-.bg-azul-050{
-    background-color: #E5F3FF;
+input {
+  background-color: white;
+  border: 1px solid var(--border-gray-50);
+  border-radius: 8px;
+  width: 327px;
+  height: 40px;
+  padding: 8px;
+}
+
+.bg-azul-050 {
+  background-color: #e5f3ff;
 }
 .bg-azul-100 {
-    background-color: #CFE9FF;
+  background-color: #cfe9ff;
 }
 .bg-azul-200 {
-    background-color: #A9D4FF;
+  background-color: #a9d4ff;
 }
 .bg-azul-300 {
-    background-color: #75B3FF;
+  background-color: #75b3ff;
 }
 .bg-azul-400 {
-    background-color: #3F82FF;
+  background-color: #3f82ff;
 }
 .bg-azul-500 {
-    background-color: #1450FF;
+  background-color: #1450ff;
 }
 .bg-azul-600 {
-    background-color: #0039FF;
+  background-color: #0039ff;
 }
 .bg-azul-700 {
-    background-color: #003AFF;
+  background-color: #003aff;
 }
 .bg-azul-800 {
-    background-color: #0034E3;
+  background-color: #0034e3;
 }
 .bg-azul-900 {
-    background-color: #0022B2;
+  background-color: #0022b2;
 }
 .bg-azul-950 {
-    background-color: #001066;
+  background-color: #001066;
+}
+.bg-white {
+  background-color: white;
 }
 
-
 .text-azul-050 {
-    color: #E5F3FF;
+  color: #e5f3ff;
 }
 
 .text-azul-100 {
-    color: #CFE9FF;
+  color: #cfe9ff;
 }
 
 .text-azul-200 {
-    color: #A9D4FF;
+  color: #a9d4ff;
 }
 
 .text-azul-300 {
-    color: #75B3FF;
+  color: #75b3ff;
 }
 
 .text-azul-400 {
-    color: #3F82FF;
+  color: #3f82ff;
 }
 
 .text-azul-500 {
-    color: #1450FF;
+  color: #1450ff;
 }
 
 .text-azul-600 {
-    color: #0039FF;
+  color: #0039ff;
 }
 
 .text-azul-700 {
-    color: #003AFF;
-
+  color: #003aff;
 }
 
 .text-azul-800 {
-    color: #0034E3;
+  color: #0034e3;
 }
 
 .text-azul-900 {
-    color: #0022B2;
+  color: #0022b2;
 }
 
 .text-azul-950 {
-    color: #001066;
-}
-
-.alert-success {
-    color: #155724;
-    background-color: #d4edda;
-    border-color: #c3e6cb;
-}
-
-.alert-danger {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
-}
-
-.col-1 {
-    width: 8.33%;
-}
-
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-}
-
-.col-9 {
-    width: 75%;
-}
-
-.col-10 {
-    width: 83.33%;
-}
-
-.col-11 {
-    width: 91.66%;
-}
-
-.col-12 {
-    width: 100%;
+  color: #001066;
 }
 
 .radio-lg {
-    border-radius: 35px;
+  border-radius: 35px;
 }
 
 .radio-small {
-    border-radius: 15px;
+  border-radius: 15px;
 }
 
-.p-1 {padding: 10px;}
+p {
+  font-size: 55px;
+  margin: 0;
+}
 
-.p-2 {padding: 20px;}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
 
-.pl-2 {padding-left: 20px;}
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-.p-3 {padding: 30px;}
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-.p-4 {padding: 40px;}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-.p-5 {padding: 50px;}
+input:checked + .slider {
+  background-color: #2196f3;
+}
 
-.m-1 {margin: 10px;}
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
 
-.m-2 {margin: 20px;}
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
 
-.m-3 {margin: 30px;}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
 
-.m-4 {margin: 40px;}
-
-.m-5 {margin: 50px;}
-
-.mt-5 {margin-top: 50px;}
-.mt-1 {margin-top: 10px;}
-
-.my-1 {margin: 10px 0;}
-
-p{font-size: 55px;margin: 0;}
-
-<div style="display: flex; justify-content: center;">
-    <div style=";width:80%;border-radius:35px;padding:50px">
-        <div style="display: flex; justify-content: space-between;">
-            <p style="color: white;font-size:55px;margin-bottom:20px;margin-top:0;font-weight:bold;">Buscas un alquiler mensual?</p>
-            <!-- <a href="" style="color: white;font-size:55px;text-decoration:none;font-weight:bold;font-weight:bold;">X</a> -->
-            <img style="height:55px;" src="./assets/img/close.png" alt="X">
-        </div>
-        <div>
-            <span style="color: rgba(255, 255, 255, 0.7);font-size:40px;">Click aquí</span>  
-            <!-- <a href="" style="color: white;font-size:40px;text-decoration:none;margin-left:20px;font-weight:bold;"> > </a>  -->
-            <img style="height:40px;" src="./assets/img/flechita.png" alt=">">
-        </div>
-    </div>
-</div>
+.slider.round:before {
+  border-radius: 50%;
+}
